Done translating the 'visualizations' directory.

--- a/locale/de_CH/madek.po
+++ b/locale/de_CH/madek.po
@@ -117,3 +117,6 @@ msgstr "Systemgruppen"
 
 msgid "Department groups"
 msgstr "Abteilungsgruppen"
+
+msgid "Change view"
+msgstr "Darstellung ändern"
