--- a/locale/de_CH/madek.po
+++ b/locale/de_CH/madek.po
@@ -120,3 +120,10 @@ msgstr "Abteilungsgruppen"
 
 msgid "Change view"
 msgstr "Darstellung ändern"
+
+msgid "Reject"
+msgstr "Ablehnen"
+
+msgid "Accept"
+msgstr "Akzeptieren"
+
