--- a/locale/madek.pot
+++ b/locale/madek.pot
@@ -287,7 +287,7 @@ msgstr ""
 msgid "List view"
 msgstr ""
 
-msgid "Order by creation date"
+msgid "Order by date of import"
 msgstr ""
 
 msgid "Order by modification date"
