--- a/locale/de_CH/madek.po
+++ b/locale/de_CH/madek.po
@@ -626,3 +626,45 @@ msgstr "Filtereinstellungen speichern"
 
 msgid "%d content elements"
 msgstr "%d Inhalte"
+
+msgid "Open admin interface"
+msgstr "Admin-Interface öffnen"
+
+msgid "Exit admin mode"
+msgstr "Admin-Modus verlassen"
+
+msgid "Switch to admin mode"
+msgstr "In Admin-Modus wechseln"
+
+msgid "Log out"
+msgstr "Abmelden"
+
+msgid "Clipboard"
+msgstr "Zwischenablage"
+
+msgid "Empty"
+msgstr "Leer"
+
+msgid "No content selected"
+msgstr "Keine Inhalte ausgewählt"
+
+msgid "Actions"
+msgstr "Aktionen"
+
+msgid "Add to/remove from set"
+msgstr "Zu Set hinzufügen/entfernen"
+
+msgid "Show permissions"
+msgstr "Zugriffsberechtigungen anzeigen"
+
+msgid "Edit permissions"
+msgstr "Zugriffsberechtigungen bearbeiten"
+
+msgid "Edit metadata of these media entries"
+msgstr "Metadaten von Medieneinträgen editieren"
+
+msgid "Clear clipboard"
+msgstr "Zwischenablage leeren"
+
+msgid "Explore / "
+msgstr "Erkunden / "
