--- a/locale/madek.pot
+++ b/locale/madek.pot
@@ -691,3 +691,15 @@ msgstr ""
 
 msgid "Continue..."
 msgstr ""
+
+msgid "Create new set"
+msgstr ""
+
+msgid "Search for a set and add the selected content to it."
+msgstr ""
+
+msgid "are highlighted."
+msgstr ""
+
+msgid "Further sets were found. Please refine your search."
+msgstr ""
