Done translating JavaScript parts of the abstract.

--- a/locale/de_CH/madek.po
+++ b/locale/de_CH/madek.po
@@ -710,3 +710,6 @@ msgstr "werden farbig gekennzeichnet."
 
 msgid "Further sets were found. Please refine your search."
 msgstr "Es wurden noch weitere Sets gefunden. Bitte verfeinern Sie Ihre Suche."
+
+msgid "of"
+msgstr "von"
