--- a/locale/en_GB/madek.po
+++ b/locale/en_GB/madek.po
@@ -687,3 +687,19 @@ msgstr "Responsible person"
 
 msgid "Continue..."
 msgstr "Continue..."
+
+msgid "Create new set"
+msgstr "Create new set"
+
+msgid "Search for a set and add the selected content to it."
+msgstr "Search for a set and add the selected content to it."
+
+msgid "are highlighted."
+msgstr "are highlighted."
+
+msgid "Further sets were found. Please refine your search."
+msgstr "Further sets were found. Please refine your search."
+
+msgid "of"
+msgstr "of"
+
